--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); */
 @import "tailwindcss";
 
 :root {
@@ -92,4 +93,5 @@
 body {
   background: var(--base);
   color: var(--text);
+  /* font-family: "Montserrat", sans-serif; */
 }
